--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -3,6 +3,12 @@
     url = "https://github.com/pyenv/pyenv.git" 
     refreshPeriod = "168h"
 
+["bin/paper_store_sparse.sh"]
+    type = "file"
+    executable = true
+    url = "https://raw.githubusercontent.com/nurupo/paper-store/master/paper_store_sparse.sh"
+    refreshPeriod = "168h"
+
 [".config/csl/styles/apa.csl"]
     type = "file"
     url = "https://raw.githubusercontent.com/citation-style-language/styles/master/apa.csl"
