--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,5 +1,12 @@
 {{ if ne .chezmoi.os "darwin" }}
+.config/yabai
+.config/skhd
+.config/karabiner
 {{ end }}
 {{ if ne .chezmoi.os "linux" }}
 .config/sway
+.config/systemd
+.config/waybar
+.config/wofi
+.config/swaylock
 {{ end }}
