--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -63,11 +63,11 @@
         // Not connected to AC
         "format-discharging": "{icon} {capacity}%",
         "format-icons": [
-            "", // Icon: battery-full
-            "", // Icon: battery-three-quarters
-            "", // Icon: battery-half
+            "", // Icon: battery-empty
             "", // Icon: battery-quarter
-            ""  // Icon: battery-empty
+            "", // Icon: battery-half
+            "", // Icon: battery-three-quarters
+            ""  // Icon: battery-full
         ],
         "tooltip": true
     },
@@ -194,7 +194,7 @@
     },
 
     "tray": {
-        "icon-size": 28,
+        "icon-size": 21,
         "spacing": 10
     }
 
