--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -1,4 +1,6 @@
 # Logo key. Use Mod1 for Alt.
+
+default_border pixel 2
 set $mod Mod4
 set $left h
 set $down j
@@ -9,6 +11,7 @@ set $term alacritty
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 set $menu wofi --show run
+
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
