--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -2,6 +2,8 @@
 
 default_border pixel 2
 set $mod Mod4
+set $hyper Control+Shift+Mod1+Mod4
+
 set $left h
 set $down j
 set $up k
@@ -11,6 +13,8 @@ set $term alacritty
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 set $menu wofi --show run
+
+
 
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
@@ -30,9 +34,8 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 ### Input configuration
 input * {
 	xkb_layout "de"
-	xkb_options "caps:swapescape"
 	natural_scroll "enable"
-	scroll_factor 0.1
+	scroll_factor 0.2
 }
 # Read `man 5 sway-input` for more information about this section.
 
@@ -42,7 +45,20 @@ input * {
     bindsym XF86MonBrightnessUp exec "light -A 10" 
     bindsym XF86MonBrightnessDown exec "light -U 10" 
     bindsym XF86KbdBrightnessUp exec "light -s sysfs/leds/smc::kbd_backlight -A 10" 
-    bindsym XF86KbdBrightnessDown exec "light -s sysfs/leds/smc::kbd_backlight -U 10" 
+    bindsym XF86KbdBrightnessDown exec "light -s sysfs/leds/smc::kbd_backlight -U 10"
+
+    bindsym $hyper+e exec "emacsclient -c -n -s ~/.cache/emacsserver/emacsen || emacs --bg-daemon=~/.cache/emacsserver/emacsen"
+    bindsym $hyper+h exec "wtype -P left -p left"
+    bindsym $hyper+l exec "wtype -P right -p right"
+    bindsym $hyper+j exec "wtype -P down -p down"
+    bindsym $hyper+k exec "wtype -P up -p up"
+    bindsym $hyper+u exec "wtype {"
+    bindsym $hyper+i exec "wtype }"
+    bindsym $hyper+m exec "wtype ["
+    bindsym $hyper+comma exec "wtype ]"
+    bindsym $hyper+plus exec "wtype \~"
+    bindsym $hyper+ssharp exec "wtype '\\\'"
+
     # Start a terminal
     bindsym $mod+Return exec $term
     # Kill focused window
