--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -189,6 +189,7 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 exec waybar
+exec mako
 exec "sleep 2;  dex -a -e sway"
 
 #exec_always "systemctl --user import-environment; systemctl --user start sway-session.target"
