--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -5,6 +5,7 @@ bin/interception-pipe1
 .config/karabiner
 {{ end }}
 {{ if ne .chezmoi.os "linux" }}
+.config/mako
 .config/kwalletrc
 .config/sway
 .config/systemd
