--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -55,6 +55,7 @@ input * {
     bindsym $hyper+comma exec "wtype ]"
     bindsym $hyper+plus exec "wtype \~"
     bindsym $hyper+ssharp exec "wtype '\\\'"
+    bindsym $hyper+d exec "darkman toggle"
 
     # Start a terminal
     bindsym $mod+Return exec $term
