implement darkman for emacs firefox gtk alacritty

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -48,15 +48,11 @@ set-option -g status-style fg=default
 set -g status-right ''
 set -g status-left ''
 set -g status-justify right
-setw -g window-status-current-format '#{?client_prefix,#[bg=yellow]#[fg=black] #S: ,#S:}#[fg=white, bg=default] #[bold, underscore]#I #W' 
+setw -g window-status-current-format '#{?client_prefix,#[bg=yellow]#[fg=white] #S: ,#S:}#[fg=default, bg=default] #[bold, underscore]#I #W' 
 setw -g window-status-format '#I #W'
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 
-# Ensure terminal starts with its own colour scheme (defined below)
-#set -g default-terminal "screen-256color"
-
-set-option -g default-terminal "alacritty"
 set-option -sa terminal-overrides ',alacritty:RGB'
 
