--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -47,9 +47,9 @@ input * {
     bindsym XF86MonBrightnessDown exec "light -U 10" 
     bindsym XF86KbdBrightnessUp exec "light -s sysfs/leds/smc::kbd_backlight -A 10" 
     bindsym XF86KbdBrightnessDown exec "light -s sysfs/leds/smc::kbd_backlight -U 10"
-    bindsym XF86AudioMute exec "pactl set-sink-mute @DEFAULT_SINK@ toggle"
-    bindsym XF86AudioLowerVolume exec "pactl set-sink-volume @DEFAULT_SINK@ -5%"
-    bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume @DEFAULT_SINK@ +5%" 
+    bindsym XF86AudioMute exec "pamixer -t"
+    bindsym XF86AudioLowerVolume exec "pamixer -d 5"
+    bindsym XF86AudioRaiseVolume exec "pamixer -i 5" 
 
     bindsym $hyper+e exec "emacsclient -c -n -s ~/.cache/emacsserver/emacsen || emacs --bg-daemon=~/.cache/emacsserver/emacsen"
     bindsym $hyper+u exec "wtype {"
