--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -192,9 +192,8 @@ bindsym $mod+r mode "resize"
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-
+exec_always pkill kanshi; exec kanshi
 exec waybar
-
 exec mako
 exec "darkman get"
 exec_always "systemctl --user import-environment WAYLAND_DISPLAY"
