revert to former color options in tmux

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -55,4 +55,5 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 
 set-option -sa terminal-overrides ',alacritty:RGB'
+set-option -g default-terminal "alacritty"
 
