--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -1,21 +1,20 @@
 # Logo key. Use Mod1 for Alt.
 
-default_border pixel 2
+default_border pixel 0
+smart_gaps on
+gaps inner 5
 font Cantarell Bold 8
 set $mod Mod4
+exec /usr/share/sway/scripts/inactive-windows-transparency.py --opacity 0.85
 
 set $left h
 set $down j
 set $up k
 set $right l
 set $term alacritty
-# Your preferred application launcher
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
-
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1366x768.png fill
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -57,7 +56,6 @@ input * {
     bindsym $mod+d exec "wofi --show=drun"
     bindsym $mod+shift+d exec "wofi --show=run"
 
-    bindsym $mod+d exec $menu
     bindsym $mod+e exec "emacsclient -cn -a ''"
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
