--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -51,7 +51,7 @@ input * {
     # Start a terminal
     bindsym $mod+Return exec $term
     # Kill focused window
-    bindsym $mod+Shift+q kill
+    bindsym $mod+q kill
     # Start your launcher
     bindsym $mod+d exec "wofi --show=drun"
     bindsym $mod+shift+d exec "wofi --show=run"
@@ -67,7 +67,7 @@ input * {
     # Reload the configuration file
     bindsym $mod+Shift+c reload
     # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
+    bindsym $mod+Shift+q exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
 #
 # Moving around:
     # Move your focus around
@@ -128,7 +128,7 @@ input * {
     bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
-    bindsym $mod+w layout tabbed
+    # bindsym $mod+w layout tabbed
     bindsym $mod+s layout toggle split
 
     # Make the current focus fullscreen
@@ -149,11 +149,11 @@ input * {
     # You can send windows there and get them back later.
 
     # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
+    bindsym $mod+w move scratchpad
 
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
+    bindsym $mod+shift+w scratchpad show
 #
 # Resizing containers:
 #
