--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -18,3 +18,12 @@
     type = "file"
     url = "https://raw.githubusercontent.com/citation-style-language/locales/master/locales-en-US.xml"
     refreshPeriod = "168h"
+
+[".config/zotra-cli"]
+    type = "git-repo"
+    url = "https://github.com/mpedramfar/zotra-cli.git"
+    refreshPeriod = "168h"
+    [".config/zotra-cli".pull]
+        args = ["--recurse-submodules"]
+    [".config/zotra-cli".clone]
+        args = ["--recurse-submodules"]
