--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,4 +1,5 @@
 set -g focus-events on
+set-option -g detach-on-destroy off
 #Quick key for moving back to the previous window
 bind-key L last-window
 
