--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -27,11 +27,11 @@
     url = "https://raw.githubusercontent.com/citation-style-language/locales/master/locales-en-US.xml"
     refreshPeriod = "168h"
 
-[".config/zotra-cli"]
+[".config/zotra-server"]
     type = "git-repo"
-    url = "https://github.com/mpedramfar/zotra-cli.git"
+    url = "https://github.com/mpedramfar/zotra-server"
     refreshPeriod = "168h"
-    [".config/zotra-cli".pull]
+    [".config/zotra-server".pull]
         args = ["--recurse-submodules"]
-    [".config/zotra-cli".clone]
+    [".config/zotra-server".clone]
         args = ["--recurse-submodules"]
