changes prefix binding

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -2,6 +2,9 @@ set -g focus-events on
 set-option -g detach-on-destroy off
 #Quick key for moving back to the previous window
 bind-key L last-window
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # Vim style bindings for pane movement
 bind-key -r h select-pane -L
