fix linting and packages

--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -1,1 +1,4 @@
-import = ["/Users/gwbrck/.config/alacritty/main.toml", "/Users/gwbrck/.config/alacritty/colors.toml"]
+import = [
+    "/Users/gwbrck/.config/alacritty/main.toml",
+    "/Users/gwbrck/.config/alacritty/colors.toml",
+]
