add passthrough to tmux conf

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -6,6 +6,8 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+set -gq allow-passthrough on
+
 # Vim style bindings for pane movement
 bind-key -r h select-pane -L
 bind-key -r j select-pane -D
