fix tmux overrides

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,12 +1,21 @@
+set -g history-limit 10000
+set -g default-terminal tmux-256color
+set -ga terminal-overrides ",*256col*,alacritty:Tc"
+set-window-option -g monitor-activity on
+
+# for image.nvim
+set -gq allow-passthrough on
+set -g visual-activity off
+
 set -g focus-events on
 set-option -g detach-on-destroy off
+
 #Quick key for moving back to the previous window
 bind-key L last-window
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-set -gq allow-passthrough on
 
 # Vim style bindings for pane movement
 bind-key -r h select-pane -L
@@ -57,8 +66,3 @@ setw -g window-status-current-format '#{?client_prefix,#[bg=yellow]#[fg=white] #
 setw -g window-status-format '#I #W'
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
-
-
-set-option -sa terminal-overrides ',alacritty:RGB'
-set-option -g default-terminal "alacritty"
-
