--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,10 +1,10 @@
 # Fonts
-font_family      Fira Code
-bold_font        Fira Code Bold
-italic_font      Maple Mono Italic
-bold_italic_font Maple Mono BoldItalic
-# font_family      Cascadia Mono
-# bold_font        Cascadia Mono Bold
+
+font_family      Maple Mono
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
 font_size 11.5
 
 
@@ -31,3 +31,4 @@ tab_separator " | "
 cursor none
 
 include themes.conf
+
