--- a/dot_config/alacritty/main.toml
+++ b/dot_config/alacritty/main.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 [colors.bright]
 black = "0x3e4249"
@@ -90,3 +89,6 @@ decorations = "buttonless"
 [window.padding]
 x = 8
 y = 4
+
+[general]
+live_config_reload = true
