--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # Fonts
 
-font_family      Maple Mono
+font_family      family = "JuliaMono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
