--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -1,87 +1,88 @@
-#!/bin/bash
-
-xcode-select -p >/dev/null 2>&1 || xcode-select --install
-
-if ! type brew >/dev/null; then
-  export PATH="/opt/homebrew/bin:${PATH}"
-  NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-fi
-
-brew bundle --no-lock --file=/dev/stdin <<EOF
+brew "chezmoi"
+brew "duck"
+brew "mas"
+brew "r"
+brew "uv"
 brew "sqlite"
 brew "ansible"
 brew "ansible-lint"
-brew "chezmoi"
-brew "cmake"
+brew "cargo"
 brew "coreutils"
 brew "curl"
-brew "dasel"
-brew "enchant"
-brew "tesseract"
-brew "fish"
-brew "gcc"
 brew "git"
-brew "gnupg"
 brew "jq"
-brew "neovim"
-brew "nmap"
 brew "node"
+brew "deno"
 brew "ocrmypdf"
 brew "pandoc"
-brew "pass"
-brew "pass-git-helper"
-brew "pass-otp"
-brew "pinentry-mac"
-brew "pipenv"
-brew "poetry"
-brew "poppler"
-brew "pygments"
-brew "r"
 brew "ripgrep"
-brew "ruff"
+brew "tesseract"
 brew "tesseract-lang"
 brew "tmux"
 brew "typst"
-brew "uv"
 brew "wget"
-brew "zoxide"
-cask "alacritty"
+cask "adobe-acrobat-reader"
+cask "db-browser-for-sqlite"
 cask "deepl"
 cask "docker"
 cask "figma"
 cask "firefox"
-cask "font-fontawesome"
-cask "font-juliamono"
-cask "font-maple-mono-nf"
-cask "font-open-sans"
-cask "font-symbols-only-nerd-font"
-cask "karabiner-elements"
 cask "ghostty"
-cask "mactex-no-gui"
-cask "miniconda"
+cask "gimp"
+cask "karabiner-elements"
+cask "logi-options+"
+cask "morgen"
 cask "nextcloud"
-cask "openvpn-connect"
+cask "obsidian"
 cask "portfolioperformance"
 cask "presentation"
-cask "quarto"
 cask "raspberry-pi-imager"
+cask "raycast"
 cask "rstudio"
 cask "signal"
 cask "spotify"
 cask "steam"
 cask "visual-studio-code"
-cask "whatsapp"
-cask "whisky"
+cask "wireshark"
+cask "zettlr"
+cask "quarto"
 cask "zoom"
+cask "mactex-no-gui"
 cask "zotero"
+cask "font-juliamono"
+cask "font-open-sans"
+cask "font-maple-mono-nf"
+mas "Affinity Photo", id: 824183456
+mas "Aiko", id: 1672085276
+mas "Bitwarden", id: 1352778147
+mas "eduVPN", id: 1317704208
+mas "Keynote", id: 409183694
+mas "Mela", id: 1568924476
+mas "Microsoft Excel", id: 462058435
+mas "Microsoft PowerPoint", id: 462062816
+mas "Microsoft Word", id: 462054704
+mas "Noir", id: 1592917505
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
+mas "Postico", id: 6446933691
+mas "Reeder", id: 6475002485
+mas "Slack", id: 803453959
+mas "Tailscale", id: 1475387142
+mas "TextCompare", id: 6502242357
+mas "Things", id: 904280696
+mas "Todoist", id: 585829637
 vscode "alefragnani.project-manager"
+vscode "alexcvzz.vscode-sqlite"
+vscode "bierner.markdown-mermaid"
 vscode "bmalehorn.vscode-fish"
+vscode "bpruitt-goddard.mermaid-markdown-syntax-highlighting"
+vscode "catppuccin.catppuccin-vsc"
 vscode "charliermarsh.ruff"
 vscode "chrischinchilla.vscode-pandoc"
+vscode "darkriszty.markdown-table-prettify"
 vscode "esbenp.prettier-vscode"
 vscode "foxundermoon.shell-format"
-vscode "github.codespaces"
-vscode "github.vscode-github-actions"
+vscode "ikuyadeu.r-pack"
 vscode "mads-hartmann.bash-ide-vscode"
 vscode "malmaud.tmux"
 vscode "mblode.zotero"
@@ -96,7 +97,6 @@ vscode "ms-toolsai.jupyter-keymap"
 vscode "ms-toolsai.jupyter-renderers"
 vscode "ms-toolsai.vscode-jupyter-cell-tags"
 vscode "ms-toolsai.vscode-jupyter-slideshow"
-vscode "ms-vscode-remote.remote-containers"
 vscode "nvarner.typst-lsp"
 vscode "quarto.quarto"
 vscode "rangav.vscode-thunder-client"
@@ -104,14 +104,11 @@ vscode "rdebugger.r-debugger"
 vscode "redhat.ansible"
 vscode "redhat.vscode-yaml"
 vscode "reditorsupport.r"
+vscode "reditorsupport.r-syntax"
+vscode "rszyma.vscode-kanata"
+vscode "sabaken.seti-minimal-folder"
 vscode "sainnhe.edge"
 vscode "sumneko.lua"
 vscode "tamasfe.even-better-toml"
 vscode "tomoki1207.pdf"
 vscode "tootone.org-mode"
-vscode "zeshuaro.vscode-python-poetry"
-EOF
-
-uv tool install kptncook
-uv tool install ansible-creator
-uv tool install pytr
