--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -6,7 +6,7 @@ brew "uv"
 brew "sqlite"
 brew "ansible"
 brew "ansible-lint"
-brew "cargo"
+brew "rust"
 brew "coreutils"
 brew "curl"
 brew "git"
@@ -97,6 +97,7 @@ vscode "ms-toolsai.jupyter-keymap"
 vscode "ms-toolsai.jupyter-renderers"
 vscode "ms-toolsai.vscode-jupyter-cell-tags"
 vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-azuretools.vscode-containers"
 vscode "nvarner.typst-lsp"
 vscode "quarto.quarto"
 vscode "rangav.vscode-thunder-client"
