--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -24,6 +24,7 @@ brew "tmux"
 brew "typst"
 brew "wget"
 cask "adobe-acrobat-reader"
+cask "cmake"
 cask "db-browser-for-sqlite"
 cask "deepl"
 cask "docker"
