add air formatter

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -94,6 +94,7 @@ vscode "ms-toolsai.vscode-jupyter-cell-tags"
 vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-azuretools.vscode-containers"
 vscode "quarto.quarto"
+vscode "Posit.air-vscode"
 vscode "rangav.vscode-thunder-client"
 vscode "rdebugger.r-debugger"
 vscode "redhat.ansible"
