--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -24,11 +24,11 @@ brew "tesseract-lang"
 brew "tmux"
 brew "typst"
 brew "wget"
+brew "cmake"
 cask "adobe-acrobat-reader"
-cask "cmake"
 cask "db-browser-for-sqlite"
 cask "deepl"
-cask "docker"
+cask "podman-desktop"
 cask "figma"
 cask "firefox"
 cask "ghostty"
@@ -47,7 +47,6 @@ cask "signal"
 cask "spotify"
 cask "steam"
 cask "visual-studio-code"
-cask "wireshark"
 cask "zettlr"
 cask "quarto"
 cask "zoom"
