--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -28,7 +28,7 @@ brew "cmake"
 cask "adobe-acrobat-reader"
 cask "db-browser-for-sqlite"
 cask "deepl"
-cask "podman-desktop"
+cask "docker-desktop"
 cask "figma"
 cask "firefox"
 cask "ghostty"
