--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -76,25 +76,23 @@ vscode "chrischinchilla.vscode-pandoc"
 vscode "darkriszty.markdown-table-prettify"
 vscode "esbenp.prettier-vscode"
 vscode "foxundermoon.shell-format"
-vscode "ikuyadeu.r-pack"
 vscode "mads-hartmann.bash-ide-vscode"
 vscode "malmaud.tmux"
 vscode "mblode.zotero"
 vscode "mechatroner.rainbow-csv"
 vscode "mongodb.mongodb-vscode"
+vscode "ms-azuretools.vscode-containers"
 vscode "ms-ceintl.vscode-language-pack-de"
 vscode "ms-python.debugpy"
 vscode "ms-python.python"
-vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.datawrangler"
 vscode "ms-toolsai.jupyter"
 vscode "ms-toolsai.jupyter-keymap"
 vscode "ms-toolsai.jupyter-renderers"
-vscode "ms-toolsai.datawrangler"
 vscode "ms-toolsai.vscode-jupyter-cell-tags"
 vscode "ms-toolsai.vscode-jupyter-slideshow"
-vscode "ms-azuretools.vscode-containers"
+vscode "posit.air-vscode"
 vscode "quarto.quarto"
-vscode "Posit.air-vscode"
 vscode "rangav.vscode-thunder-client"
 vscode "rdebugger.r-debugger"
 vscode "redhat.ansible"
