--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -107,3 +107,4 @@ vscode "sumneko.lua"
 vscode "tamasfe.even-better-toml"
 vscode "tomoki1207.pdf"
 vscode "tootone.org-mode"
+vscode "tombi-toml.tombi"
