replace bitwarden-cli with rbw

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -15,7 +15,7 @@ brew "neovim"
 brew "jq"
 brew "node"
 brew "deno"
-brew "bitwarden-cli"
+brew "rbw"
 brew "ocrmypdf"
 brew "pandoc"
 brew "ripgrep"
