R_profile env fix

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -4,6 +4,7 @@ dot_config/homebrew
 .chezmoiscripts/run_after-mac-configure.sh
 .chezmoiscripts/run_once_before_10-mac-bootstrap.sh
 .config/karabiner
+private_Library/
 {{ end }}
 {{ if ne .chezmoi.os "windows" }}
 ahk
