--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -86,6 +86,7 @@ vscode "ms-azuretools.vscode-containers"
 vscode "ms-ceintl.vscode-language-pack-de"
 vscode "ms-python.debugpy"
 vscode "ms-python.python"
+vscode "ms-python.vscode-python-envs"
 vscode "ms-toolsai.datawrangler"
 vscode "ms-toolsai.jupyter"
 vscode "ms-toolsai.jupyter-keymap"
