add grid table extension

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -74,7 +74,6 @@ vscode "bpruitt-goddard.mermaid-markdown-syntax-highlighting"
 vscode "catppuccin.catppuccin-vsc"
 vscode "charliermarsh.ruff"
 vscode "chrischinchilla.vscode-pandoc"
-vscode "darkriszty.markdown-table-prettify"
 vscode "esbenp.prettier-vscode"
 vscode "foxundermoon.shell-format"
 vscode "mads-hartmann.bash-ide-vscode"
@@ -109,3 +108,5 @@ vscode "tamasfe.even-better-toml"
 vscode "tomoki1207.pdf"
 vscode "tootone.org-mode"
 vscode "tombi-toml.tombi"
+vscode "alexhammans.pandoc-grid-table"
+vscode "TakumiI.markdowntable"
