add vscode extension

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -110,3 +110,4 @@ vscode "tootone.org-mode"
 vscode "tombi-toml.tombi"
 vscode "alexhammans.pandoc-grid-table"
 vscode "TakumiI.markdowntable"
+vscode "nhoizey.gremlins"
