--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -51,6 +51,7 @@ cask "steam"
 cask "visual-studio-code"
 cask "quarto"
 cask "zoom"
+cask "chatgpt"
 cask "mactex-no-gui"
 cask "zotero"
 cask "font-juliamono"
