--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -3,6 +3,7 @@ brew "chezmoi"
 brew "fish"
 brew "age"
 brew "age-plugin-se"
+brew "sops"
 brew "duck"
 brew "mas"
 brew "r"
@@ -115,3 +116,4 @@ vscode "tombi-toml.tombi"
 vscode "alexhammans.pandoc-grid-table"
 vscode "TakumiI.markdowntable"
 vscode "nhoizey.gremlins"
+vscode "signageos.signageos-vscode-sops"
