--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,2 +1,2 @@
-theme = dark:catppuccin-mocha, light:catppuccin-latte
+theme = dark:Catppuccin Mocha, light:Catppuccin Latte
 font-family = JuliaMono
