add element rm morgen

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -39,7 +39,7 @@ cask "ghostty"
 cask "gimp"
 cask "karabiner-elements"
 cask "logi-options+"
-cask "morgen"
+cask "element"
 cask "nextcloud"
 cask "obsidian"
 cask "portfolioperformance"
