--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -42,6 +42,7 @@ cask "logi-options+"
 cask "element"
 cask "nextcloud"
 cask "obsidian"
+cask "raycast"
 cask "portfolioperformance"
 cask "presentation"
 cask "raspberry-pi-imager"
