rm sops and add wholroyd.jinja

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -117,4 +117,4 @@ vscode "tombi-toml.tombi"
 vscode "alexhammans.pandoc-grid-table"
 vscode "TakumiI.markdowntable"
 vscode "nhoizey.gremlins"
-vscode "signageos.signageos-vscode-sops"
+vscode "samuelcolvin.jinjahtml"
