--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -33,6 +33,7 @@ cask "adobe-acrobat-reader"
 cask "db-browser-for-sqlite"
 cask "docker-desktop"
 cask "figma"
+cask "affinity"
 cask "firefox"
 cask "ghostty"
 cask "gimp"
