add quarto wizard

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -80,6 +80,7 @@ vscode "catppuccin.catppuccin-vsc"
 vscode "charliermarsh.ruff"
 vscode "chrischinchilla.vscode-pandoc"
 vscode "esbenp.prettier-vscode"
+vscode "mcanouil.quarto-wizard"
 vscode "foxundermoon.shell-format"
 vscode "mads-hartmann.bash-ide-vscode"
 vscode "malmaud.tmux"
