--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -29,6 +29,7 @@ brew "typst"
 brew "wget"
 brew "cmake"
 # brew "d12frosted/emacs-plus/emacs-plus@30", args: ["with-elrumo2-icon"]
+cask "actual"
 cask "adobe-acrobat-reader"
 cask "db-browser-for-sqlite"
 cask "docker-desktop"
