--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -54,6 +54,7 @@ cask "steam"
 cask "visual-studio-code"
 cask "quarto"
 cask "zoom"
+cask "zettlr"
 cask "mactex-no-gui"
 cask "zotero"
 cask "font-juliamono"
