--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -57,6 +57,7 @@ cask "zoom"
 cask "zettlr"
 cask "mactex-no-gui"
 cask "zotero"
+cask "languagetool-desktop"
 cask "font-juliamono"
 cask "font-noto-sans"
 cask "font-maple-mono-nf"
