--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -21,6 +21,7 @@ brew "deno"
 brew "rbw"
 brew "ocrmypdf"
 brew "pandoc"
+brew "pandoc-crossref"
 brew "ripgrep"
 brew "tesseract"
 brew "tesseract-lang"
