add opencode and xorriso

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -26,10 +26,12 @@ brew "pandoc-crossref"
 brew "ripgrep"
 brew "tesseract"
 brew "tesseract-lang"
+brew "opencode"
 brew "tmux"
 brew "typst"
 brew "wget"
 brew "cmake"
+brew "xorriso"
 cask "emacs-plus-app"
 cask "actual"
 cask "adobe-acrobat-reader"
