--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -34,6 +34,7 @@ brew "cmake"
 brew "xorriso"
 cask "emacs-plus-app"
 cask "actual"
+cask "netnewswire"
 cask "adobe-acrobat-reader"
 cask "db-browser-for-sqlite"
 cask "docker-desktop"
