--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,3 +1,3 @@
 theme = dark:Catppuccin Mocha, light:Catppuccin Latte
 font-family = JuliaMono
-shell-integration-features = ssh-terminfo
+shell-integration-features = ssh-env
