add opencloud and claude

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -27,12 +27,13 @@ brew "pandoc-crossref"
 brew "ripgrep"
 brew "tesseract"
 brew "tesseract-lang"
-brew "opencode"
 brew "tmux"
 brew "typst"
 brew "wget"
 brew "cmake"
 brew "xorriso"
+cask "claude"
+cask "opencloud"
 cask "audacity"
 cask "emacs-plus-app"
 cask "actual"
