--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -33,6 +33,8 @@ brew "typst"
 brew "wget"
 brew "cmake"
 brew "xorriso"
+brew "opencode"
+cask "opencode-desktop"
 cask "claude"
 cask "opencloud"
 cask "audacity"
@@ -126,3 +128,5 @@ vscode "alexhammans.pandoc-grid-table"
 vscode "TakumiI.markdowntable"
 vscode "nhoizey.gremlins"
 vscode "samuelcolvin.jinjahtml"
+vscode "sst-dev.opencode"
+
