--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -1,4 +1,5 @@
 tap "d12frosted/emacs-plus"
+tap "oven-sh/bun"
 brew "chezmoi"
 brew "fish"
 brew "age"
@@ -10,6 +11,7 @@ brew "mas"
 brew "zoxide"
 brew "r"
 brew "uv"
+brew "bun"
 brew "sqlite"
 brew "rust"
 brew "coreutils"
