--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -36,6 +36,7 @@ brew "wget"
 brew "cmake"
 brew "xorriso"
 brew "opencode"
+cask "raycast"
 cask "opencode-desktop"
 cask "claude"
 cask "opencloud"
